Ok version mobile - V1 - A ajouter : footer fixe : accueil=ok / menu = encours

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@ body #bloc_page {
   justify-content: flex-start;
   position: relative;
   box-sizing: border-box;
-  border: solid;
 }
 body a {
   color: black;
