--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,7 +8,6 @@ body {
     justify-content: flex-start;
     position: relative;
     box-sizing: border-box;
-    border: solid;
   }
   a {
     color: black;
